--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+#contact, #about, #home, #portfolio{
+  margin-top: 60px;
+}
+
 .bg-teal{
   background-color: #1ABC9C;
 }
